# HiWonder_JetAuto

./: .gitignore  .gitmodules  CLAUDE.md  README.md
Changelog/: 0.9.0.md  0.9.1.md  0.9.2.md  0.9.3.md  0.9.4.md  0.9.5.md  0.9.6.md  0.9.7.md  0.9.8.md
jetson/: jetson_env.sh  jetson_navigation.sh  jetson_rviz.sh  jetson_slam.sh  jetson_start.sh  jetson_teleop.sh
jetson/src/interfaces/: CMakeLists.txt  package.xml
jetson/src/jetauto_description/: package.xml
jetson/src/jetauto_peripherals/: package.xml  setup.cfg  setup.py
jetson/src/lidar_receiver/: package.xml  setup.cfg  setup.py
jetson/src/lidar_receiver/config/: lidar_filters_config.yaml
jetson/src/lidar_receiver/launch/: lidar_receiver.launch.py
jetson/src/lidar_receiver/lidar_receiver/: lidar_receiver_node.py
jetson/src/navigation/: package.xml  setup.py
jetson/src/ros_robot_controller_msgs/: CMakeLists.txt  package.xml
jetson/src/servo_controller_msgs/: CMakeLists.txt
jetson/src/slam/: package.xml  setup.py
jetson/src/xf_mic_asr_offline/: CMakeLists.txt
pi3/: pi3_env.sh  pi3_start.sh
pi3/doc/: pi3部署.md  ubuntu22.04.5系统优化.md
pi3/src/bringup/: package.xml  setup.py
pi3/src/calibration/: package.xml  setup.py
pi3/src/controller/: package.xml  setup.py
pi3/src/driver/: setup.py
pi3/src/imu_calib/: CMakeLists.txt  package.xml
pi3/src/interfaces/: CMakeLists.txt  mapping_rules.yaml  package.xml
pi3/src/jetauto_description/: package.xml  setup.py
pi3/src/lidar_bridge/: package.xml  setup.cfg  setup.py
pi3/src/peripherals/: package.xml  setup.py
pi3/src/sdk/: package.xml  (+1 more)
(+120 files in other folders)
